# ProjectFlow

./: .dockerignore  .env.example  .env.security  .eslintignore  .gitignore  00_ATTACK_PREVENTION_COMPLETE.txt  00_COMPLETE_AUDIT_SUMMARY.md  00_DOCUMENTATION_INDEX.md  00_PROJECT_100_PERCENT_COMPLETE.md  00_SECURITY_RESTORATION_SUMMARY.md  ADVANCED_FEATURES.md  ATTACK_PREVENTION_QUICK_GUIDE.md  AUDIT_COMPLETE.txt  AUDIT_COMPLETION_SUMMARY.txt  BUG_FIXES_COMPLETE.md  BUG_FIXES_VERIFICATION.md  BUG_FIX_VERIFICATION.md  BUG_REPORT_ISSUE_MANAGEMENT.md  BUTTON_FIXES.md  CODE_CHANGES_REFERENCE.md  COMPLETE_APPLICATION_MANUAL.md  COMPLETE_ATTACK_PREVENTION_SUMMARY.md  COMPLETE_BUG_FIX_REPORT.md  COMPLETE_EXHAUSTIVE_MANUAL_PART1.md  COMPLETE_EXHAUSTIVE_MANUAL_PART2.md  COMPLETE_EXHAUSTIVE_MANUAL_PART3.md  COMPLETE_FIX_SUMMARY.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  COMPLETE_JIRA_FEATURE_INVENTORY.md  COMPLETE_JIRA_HTML_ANALYSIS.md  COMPREHENSIVE_AUDIT_AND_FIXES_REPORT.md  COMPREHENSIVE_BUG_FIXES.md  CONTRIBUTING.md  CSRF_FIX_SUMMARY.md  CSS_AUDIT_COMPLETE.md  CSS_AUDIT_DETAILED_PATTERNS.md  CSS_AUDIT_EXECUTIVE_SUMMARY.md  CSS_AUDIT_INDEX.md  CSS_AUDIT_QUICK_REFERENCE.md  CSS_AUDIT_SUMMARY.txt  (+187 more)
Jira Source/: https___home.atlassian.com_o_b3adea25-2a4f-46f3-8be3-3a3a7430fc09_people_712020_748ec2d2-ea40-4cc1-b7ef-2f335dde8c2d_cloudId=35cf3607-93b2-40d0-8ba6-25f5fd8fc75e.html  https___kalpeshsolanki1337.atlassian.net_issues__filter=-1.html  https___kalpeshsolanki1337.atlassian.net_issues__filter=-111.html  https___kalpeshsolanki1337.atlassian.net_issues__jql=assignee_20_3D_20currentUser()_20AND_20project_3D_27TEST_27_20AND_20statusCategory_20!_3D_203.html  https___kalpeshsolanki1337.atlassian.net_issues_filter=-j1.html  https___kalpeshsolanki1337.atlassian.net_jira_for-you.html  https___kalpeshsolanki1337.atlassian.net_jira_ops_alerts__view=detail&queryww=.html  https___kalpeshsolanki1337.atlassian.net_jira_ops_alerts_view=list&query=.html  https___kalpeshsolanki1337.atlassian.net_jira_ops_alerts_view=list&query=1.html  https___kalpeshsolanki1337.atlassian.net_jira_servicedesk_projects_SUP_change-calendar_eventSubtypes=FREEZE_2CMAINTENANCE&date=2026-01-23.html  https___kalpeshsolanki1337.atlassian.net_jira_servicedesk_projects_SUP_change-calendar_eventSubtypes=FREEZE_2CMAINTENANCE&date=2026-01-231.html  https___kalpeshsolanki1337.atlassian.net_jira_servicedesk_projects_SUP_change-calendar_eventSubtypes=FREEZE_2CMAINTENANCE&date=2026-01-232.html  https___kalpeshsolanki1337.atlassian.net_jira_servicedesk_projects_SUP_change-calendar_eventSubtypes=FREEZE_2CMAINTENANCE&date=2026-01-23`33.html  https___kalpeshsolanki1337.atlassian.net_jira_servicedesk_projects_SUP_change-calendar_eventSubtypes=FREEZE_2CMAINTENANCE&datrre=2026-01-23.html  https___kalpeshsolanki1337.atlassian.net_jira_servicedesk_projects_SUP_customers.html  https___kalpeshsolanki1337.atlassian.net_jira_servicedesk_projects_SUP_queues_custom_3.html  https___kalpeshsolanki1337.atlassian.net_jira_software_c_projects_TEST_boards_1_calendar.html  https___kalpeshsolanki1337.atlassian.net_jira_software_c_projects_TEST_boards_1_timeline.html  (+1 more)
(+398 files in other folders)
