[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "project-management-system"
version = "2.0.0"
description = "A production-grade, enterprise-level project management system built with Flask"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Project Management Team", email = "team@example.com"}
]
keywords = ["flask", "project-management", "kanban", "jira", "enterprise"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Flask",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Project Management",
]

dependencies = [
    "Flask==3.0.0",
    "Flask-SQLAlchemy==3.1.1",
    "Werkzeug==3.0.1",
    "SQLAlchemy==2.0.23",
    "cryptography==41.0.7",
    "bleach==6.1.0",
    "argon2-cffi==23.1.0",
    "Flask-WTF==1.2.1",
    "Flask-Talisman==1.1.0",
    "Flask-Login==0.6.3",
    "Flask-Limiter==3.5.0",
    "Flask-Compress==1.14",
    "python-dotenv==1.0.0",
    "Flask-Migrate==4.0.5",
    "alembic==1.13.1",
    "gunicorn==21.2.0",
    "python-json-logger==2.0.7",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-cov==4.1.0",
    "pytest-flask==1.3.0",
]

[project.urls]
Homepage = "https://github.com/xploitoverload/project-management"
Documentation = "https://github.com/xploitoverload/project-management#readme"
Repository = "https://github.com/xploitoverload/project-management"
Issues = "https://github.com/xploitoverload/project-management/issues"

[project.scripts]
project-management = "run:main"
pm-init-db = "run:init_database"
pm-migrate = "run:run_migrations"
pm-routes = "run:show_routes"

[tool.setuptools]
packages = ["app", "app.middleware", "app.models", "app.routes", "app.services", "app.utils", "app.security"]

[tool.setuptools.package-data]
app = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"

[tool.coverage.run]
source = ["app"]
omit = ["*/tests/*", "*/migrations/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
