[metadata]
name = project-management-system
version = 2.0.0

[options]
zip_safe = False
include_package_data = True

[options.packages.find]
exclude =
    tests*
    docs*
    migrations*
    logs*
    __pycache__*
    *.egg-info*

[flake8]
max-line-length = 120
exclude = 
    .git,
    __pycache__,
    venv,
    .venv,
    migrations,
    logs
ignore = E203, E266, W503

[mypy]
python_version = 3.10
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = False
ignore_missing_imports = True
